# rapporto

./: .gitignore  .readthedocs.yaml  CHANGES.md  MANIFEST.in  README.md  codecov.yml  pyproject.toml  rapporto.py
.github/workflows/: main.yml
docs/: backlog.md  conf.py  index.md  install.md  project.md
docs/animate/: git.md  index.md
docs/guide/: github.md  index.md  opsgenie.md  options.md  slack.md
docs/project/: caveats.md  index.md  prior-art.md  sandbox.md
docs/report/: index.md  slack.md  text.md
docs/sink/: index.md  slack.md
docs/source/: github.md  slack.md
docs/tool/: index.md
docs/tool/aika/: index.md
docs/tool/goof/: index.md  slack.md
docs/ui/: index.md  slack.md
src/pueblo_goof/: cli.py  util.py
src/pueblo_goof/slack/: conversation.py  model.py
src/rapporto/: __init__.py  cli.py  core.py  option.py  util.py
src/rapporto/animate/: cli.py  git.py
src/rapporto/github/: actions.py  activity.py  attention.py  backup.py  cli.py  core.py  model.py  util.py
src/rapporto/notify/: cli.py  slack.py
src/rapporto/notify/slack/: conversation.py  model.py  weekly.py
src/rapporto/opsgenie/: cli.py  core.py
src/rapporto/report/: cli.py  model.py  slack.py
src/rapporto/slack/: cli.py  core.py  out.py
src/rapporto/source/changes/: cli.py  core.py  util.py
src/rapporto/source/github/: actions.py  activity.py  attention.py  backup.py  cli.py  model.py  util.py
src/rapporto/source/opsgenie/: cli.py  core.py
src/rapporto/source/slack/: cli.py  core.py
src/rapporto/ui/: slack.py
tests/: conftest.py  test_cli.py  test_util.py
tests/animate/: test_git.py
tests/github/: test_cli.py  test_util.py
tests/opsgenie/: test_cli.py
tests/pueblo_goof/: conftest.py  test_slack.py
tests/report/: test_cli.py
tests/slack/: test_cli.py
tests/ui/: test_slack.py
